feat: word cloud

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ openai_key.txt
 Coca-Cola Original_with label.xlsx
 CocaCola_Reviews_with_Categories_v2.xlsx
 CocaCola_Reviews_with_Categories.xlsx
+all_reviews_translated.xlsx
+all_reviews_translated - Copy.xlsx
+Givaudan_Reviews_with_Categories.xlsx
